--- a/app-db.json
+++ b/app-db.json
@@ -1,1 +1,1 @@
-{"b2xVn2":"http://www.lighthouselabs.ca","TVIwIW":"http://www.github.com","Xeo9mg":"http://www.youtube.com"}
+{"b2xVn2":"http://www.lighthouselabs.ca","TVIwIW":"http://www.github.com","Bkcksw":"http://www.youtube.com"}
