--- a/app-db.json
+++ b/app-db.json
@@ -1,1 +1,1 @@
-{"b2xVn2":"http://www.lighthouselabs.ca","TVIwIW":"http://www.yahoo.ca","Bkcksw":"http://www.youtube.com"}
+{"b2xVn2":"http://www.lighthouselabs.ca","TVIwIW":"http://www.yahoo.ca","Bkcksw":"http://www.canada.ca","tJlGLm":"http://www.reddit.com","9sm5xK":"http://www.google.com"}
