--- a/app-db.json
+++ b/app-db.json
@@ -1,1 +1,1 @@
-{"b2xVn2":"http://www.lighthouselabs.ca","9sm5xK":"http://www.google.com","5t02We":"http://www.bloomberg.com","iTZrja":"http://www.reddit.com","TaEMFI":"https://help.ubuntu.com"}
+{"b2xVn2":"http://www.lighthouselabs.ca","9sm5xK":"http://www.google.com","5t02We":"http://www.bloomberg.com","iTZrja":"http://www.reddit.com","TaEMFI":"https://help.ubuntu.com","dmiYxI":"http://www.github.com"}
