--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   },
   "homepage": "https://github.com/dmyronuk/tiny-app#readme",
   "dependencies": {
+    "bcrypt": "2.0.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "nodemon": "^1.17.5",
-    "bcrypt": "2.0.0"
+    "nodemon": "^1.17.5"
   }
 }
