--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "method-override": "^2.3.10",
     "nodemon": "^1.17.5"
   }
 }
