add registration error messages big fixes

--- a/app-db.json
+++ b/app-db.json
@@ -1,1 +1,1 @@
-{"b2xVn2":"http://www.lighthouselabs.ca","9sm5xK":"http://www.google.com","5t02We":"http://www.bloomberg.com","iTZrja":"http://www.reddit.com","TaEMFI":"https://help.ubuntu.com","IcaBAX":"http://www.bloomberg.com","zfDcCB":"https://css-tricks.com/"}
+{"b2xVn2":"http://www.lighthouselabs.ca","9sm5xK":"http://www.google.com","5t02We":"http://www.bloomberg.com","iTZrja":"http://www.reddit.com","TaEMFI":"https://help.ubuntu.com","IcaBAX":"http://www.bloomberg.com","civp0r":"http://www.yahoo.com","ipUPGk":"https://www.walmart.ca"}
