--- a/package.json
+++ b/package.json
@@ -22,10 +22,7 @@
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "ejs": "^2.6.1",
-    "eslint": "^4.19.1",
     "express": "^4.16.3",
-    "method-override": "^2.3.10",
-    "nodemon": "^1.17.5",
-    "eslint-config-lighthouselabs": "github:lighthouse-labs/eslint-config-lighthouselabs"
+    "method-override": "^2.3.10"
   }
 }
